--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <log4j.version>1.2.17</log4j.version>
         <jdk.version>1.7</jdk.version>
         <context.path>SpringHibernateAnnotations</context.path>
+        <sonar.host.url>http://34.198.120.187:9000</sonar.host.url>
     </properties>
 
     <build>
