Updated db details

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 database.driver=com.mysql.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/um_db
+database.url=jdbc:mysql://34.198.120.187:3306/um_db
 database.user=root
-database.password=password
+database.password=welcome
 hibernate.show_sql=true
