--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
         <jdk.version>1.7</jdk.version>
         <context.path>SpringHibernateAnnotations</context.path>
         <sonar.host.url>http://34.198.120.187:9000</sonar.host.url>
+        <sonar.language>js</sonar.language>
+    	<sonar.exclusions>extjs/**</sonar.exclusions>
+        
     </properties>
 
     <build>
@@ -31,6 +34,7 @@
                 </configuration>
             </plugin>
         </plugins>
+            <sourceDirectory>src/main/java</sourceDirectory>
     </build>
     <dependencies>
         <dependency>
