--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <sonar.host.url>http://34.198.120.187:9000</sonar.host.url>
         <sonar.language>js</sonar.language>
     	<sonar.exclusions>src/main/webapp/**/*</sonar.exclusions>
+    	<sonar.inclusions>src/main/java/**/*</sonar.inclusions>
 
         
     </properties>
