--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,9 @@
         
     	<sonar.exclusions>src/main/webapp/**/*</sonar.exclusions>
     	<sonar.inclusions>src/main/java/**/*.java</sonar.inclusions>
-
+		
+		<maven.compiler.source>7</maven.compiler.source>
+        <maven.compiler.target>7</maven.compiler.target>
         
     </properties>
 
@@ -35,6 +37,28 @@
                     <target>${jdk.version}</target>
                 </configuration>
             </plugin>
+			
+			<plugin>
+      <groupId>org.jacoco</groupId>
+      <artifactId>jacoco-maven-plugin</artifactId>
+      <version>2.2.1</version>
+      <executions>
+        <execution>
+          <id>pre-unit-test</id>
+          <goals>
+            <goal>prepare-agent</goal>
+          </goals>
+        </execution>
+        <execution>
+          <id>post-unit-test</id>
+          <phase>test</phase>
+          <goals>
+            <goal>report</goal>
+          </goals>
+        </execution>
+      </executions>
+    </plugin>
+			
         </plugins>
             <sourceDirectory>src/main/java</sourceDirectory>
     </build>
